force-app/main/default/objects/ECM_Processed__e/ECM_Processed__e.object-meta.xml
<CustomObject>
    <description>Once ECM completes creating the document. Fire this event with CMP Id and other attributes</description>
    <label>ECM Processed</label>
    <pluralLabel>ECM Processed</pluralLabel>
</CustomObject>