force-app/main/default/objects/ECM_Processed__e/fields/CMP_Id__c.field-meta.xml
<CustomField>
    <fullName>CMP_Id__c</fullName>
    <description>ECM document Id</description>
    <label>CMP_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>