force-app/main/default/objects/ECM_Processed__e/fields/Count__c.field-meta.xml
<CustomField>
    <fullName>Count__c</fullName>
    <description>Mostly used for ZIP files</description>
    <label>Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>