force-app/main/default/objects/ECM_Processed__e/fields/Document_File_Extension__c.field-meta.xml
<CustomField>
    <fullName>Document_File_Extension__c</fullName>
    <label>Document File Extension</label>
    <length>255</length>
    <type>Text</type>
</CustomField>