force-app/main/default/objects/ECM_Processed__e/fields/LifeCycle_Status__c.field-meta.xml
<CustomField>
    <fullName>LifeCycle_Status__c</fullName>
    <label>LifeCycle Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>