force-app/main/default/objects/ECM_Processed__e/fields/SFId__c.field-meta.xml
<CustomField>
    <fullName>SFId__c</fullName>
    <description>Salesforce Id of processed documents</description>
    <label>SFId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>