force-app/main/default/objects/ECM_Processed__e/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of the request. It could be Success or failure</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>