force-app/main/default/objects/ECM_Processed__e/fields/TrackingId__c.field-meta.xml
<CustomField>
    <fullName>TrackingId__c</fullName>
    <description>Tracking Id unique for every request</description>
    <label>TrackingId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>